--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["94768535137@s.whatsapp.net"],
-    "ownerName": "DINUWA LK OFFICIAL BOT",
-    "instagram" : "https://instagram.com/dinuwa_lk._",
-    "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "http://dinuwa-lk.github.io",
+    "ownerNumber": ["94771532887@s.whatsapp.net"],
+    "ownerName": "𝙷𝙸𝚁𝚄𝚆𝙰 LK OFFICIAL BOT",
+    "whatsapp" : "https://chat.whatsapp.com/CIIUKrv3bS55ZK3QUDgbJV",
+    "botName": "𝙷𝙸𝚁𝚄𝚆𝙰🐧-Mdོ ",
+    "footer": "https://chat.whatsapp.com/CIIUKrv3bS55ZK3QUDgbJV",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
